Added PPO for Atari

--- a/PPO_continuous_action.ipynb
+++ b/PPO_continuous_action.ipynb
@@ -381,7 +381,7 @@
     "import tensorflow_probability.substrates.jax.distributions as tfp\n",
     "\n",
     "@jit\n",
-    "def get_action_and_value(agent_state: TrainState, next_obs: ndarray, next_done: ndarray, storage: Storage, step: int, key: random.PRNGKeyArray):\n",
+    "def get_action_and_value(agent_state: AgentState, next_obs: ndarray, next_done: ndarray, storage: Storage, step: int, key: random.PRNGKeyArray):\n",
     "    action_mean, action_logstd = agent_state.actor_fn(agent_state.params.actor_params, next_obs)\n",
     "    value = agent_state.critic_fn(agent_state.params.critic_params, next_obs)\n",
     "    action_std = jnp.exp(action_logstd)\n",
@@ -410,7 +410,7 @@
    "outputs": [],
    "source": [
     "@jit\n",
-    "def get_action_and_value2(agent_state: TrainState, params: AgentParams, obs: ndarray, action: ndarray):\n",
+    "def get_action_and_value2(agent_state: AgentState, params: AgentParams, obs: ndarray, action: ndarray):\n",
     "    action_mean, action_logstd = agent_state.actor_fn(params.actor_params, obs)\n",
     "    value = agent_state.critic_fn(params.critic_params, obs)\n",
     "    action_std = jnp.exp(action_logstd)\n",
@@ -902,20 +902,16 @@
    "execution_count": 41,
    "outputs": [],
    "source": [
-    "try:\n",
-    "    for i in range(10):\n",
-    "        observation, _ = test_env.reset()\n",
-    "        while True:\n",
-    "            observation = observation.reshape((1, -1))\n",
-    "            action, action_key = get_action(agent_state, observation, action_key)\n",
-    "            action = action.reshape((-1))\n",
-    "            observation, reward, terminated, truncated, info = test_env.step(action)\n",
-    "            if terminated or truncated:\n",
-    "                break\n",
-    "except KeyboardInterrupt:\n",
-    "    print(colored('Validation stopped!', 'red'))\n",
-    "finally:\n",
-    "    test_env.close()"
+    "for i in range(10):\n",
+    "    observation, _ = test_env.reset()\n",
+    "    while True:\n",
+    "        observation = observation.reshape((1, -1))\n",
+    "        action, action_key = get_action(agent_state, observation, action_key)\n",
+    "        action = action.reshape((-1))\n",
+    "        observation, reward, terminated, truncated, info = test_env.step(action)\n",
+    "        if terminated or truncated:\n",
+    "            break\n",
+    "test_env.close()"
    ],
    "metadata": {
     "collapsed": false
