--- a/PPO.ipynb
+++ b/PPO.ipynb
@@ -647,366 +647,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001B[34m\u001B[1mwandb\u001B[0m: Currently logged in as: \u001B[33majaskowiec\u001B[0m. Use \u001B[1m`wandb login --relogin`\u001B[0m to force relogin\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "wandb version 0.14.2 is available!  To upgrade, please run:\n $ pip install wandb --upgrade"
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "Tracking run with wandb version 0.14.1"
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "Run data is saved locally in <code>/home/adrian/Projekty/PPO/wandb/run-20230409_194200-ho89znfd</code>"
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "Syncing run <strong><a href='https://wandb.ai/ajaskowiec/Acrobot-v1/runs/ho89znfd' target=\"_blank\">PPO_1_Sun_Apr_9_19:41:59_2023</a></strong> to <a href='https://wandb.ai/ajaskowiec/Acrobot-v1' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": " View project at <a href='https://wandb.ai/ajaskowiec/Acrobot-v1' target=\"_blank\">https://wandb.ai/ajaskowiec/Acrobot-v1</a>"
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": " View run at <a href='https://wandb.ai/ajaskowiec/Acrobot-v1/runs/ho89znfd' target=\"_blank\">https://wandb.ai/ajaskowiec/Acrobot-v1/runs/ho89znfd</a>"
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "  0%|          | 0/976 [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "47e68e8dbe2b45c3935b4fb622f62760"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-04-09 19:42:02.167051: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Moviepy - Building video /home/adrian/Projekty/PPO/videos/Acrobot-v1/rl-video-episode-0.mp4.\n",
-      "Moviepy - Writing video /home/adrian/Projekty/PPO/videos/Acrobot-v1/rl-video-episode-0.mp4\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "t:   0%|          | 0/502 [00:00<?, ?it/s, now=None]\u001B[A\n",
-      "t:  13%|█▎        | 65/502 [00:00<00:00, 649.85it/s, now=None]\u001B[A\n",
-      "t:  30%|███       | 152/502 [00:00<00:00, 776.30it/s, now=None]\u001B[A\n",
-      "t:  48%|████▊     | 241/502 [00:00<00:00, 824.71it/s, now=None]\u001B[A\n",
-      "t:  66%|██████▌   | 331/502 [00:00<00:00, 850.48it/s, now=None]\u001B[A\n",
-      "t:  83%|████████▎ | 418/502 [00:00<00:00, 856.90it/s, now=None]\u001B[A\n",
-      "                                                               \u001B[A"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Moviepy - Done !\n",
-      "Moviepy - video ready /home/adrian/Projekty/PPO/videos/Acrobot-v1/rl-video-episode-0.mp4\n",
-      "Moviepy - Building video /home/adrian/Projekty/PPO/videos/Acrobot-v1/rl-video-episode-1.mp4.\n",
-      "Moviepy - Writing video /home/adrian/Projekty/PPO/videos/Acrobot-v1/rl-video-episode-1.mp4\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "t:   0%|          | 0/501 [00:00<?, ?it/s, now=None]\u001B[A\n",
-      "t:  15%|█▍        | 75/501 [00:00<00:00, 746.37it/s, now=None]\u001B[A\n",
-      "t:  34%|███▎      | 168/501 [00:00<00:00, 852.92it/s, now=None]\u001B[A\n",
-      "t:  52%|█████▏    | 262/501 [00:00<00:00, 889.76it/s, now=None]\u001B[A\n",
-      "t:  71%|███████▏  | 358/501 [00:00<00:00, 917.10it/s, now=None]\u001B[A\n",
-      "t:  90%|████████▉ | 450/501 [00:00<00:00, 912.03it/s, now=None]\u001B[A\n",
-      "                                                               \u001B[A"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Moviepy - Done !\n",
-      "Moviepy - video ready /home/adrian/Projekty/PPO/videos/Acrobot-v1/rl-video-episode-1.mp4\n",
-      "Moviepy - Building video /home/adrian/Projekty/PPO/videos/Acrobot-v1/rl-video-episode-8.mp4.\n",
-      "Moviepy - Writing video /home/adrian/Projekty/PPO/videos/Acrobot-v1/rl-video-episode-8.mp4\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "t:   0%|          | 0/502 [00:00<?, ?it/s, now=None]\u001B[A\n",
-      "t:  14%|█▍        | 71/502 [00:00<00:00, 707.26it/s, now=None]\u001B[A\n",
-      "t:  31%|███▏      | 158/502 [00:00<00:00, 799.28it/s, now=None]\u001B[A\n",
-      "t:  49%|████▊     | 244/502 [00:00<00:00, 824.37it/s, now=None]\u001B[A\n",
-      "t:  66%|██████▌   | 330/502 [00:00<00:00, 837.70it/s, now=None]\u001B[A\n",
-      "t:  83%|████████▎ | 418/502 [00:00<00:00, 852.49it/s, now=None]\u001B[A\n",
-      "                                                               \u001B[A"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Moviepy - Done !\n",
-      "Moviepy - video ready /home/adrian/Projekty/PPO/videos/Acrobot-v1/rl-video-episode-8.mp4\n",
-      "Moviepy - Building video /home/adrian/Projekty/PPO/videos/Acrobot-v1/rl-video-episode-27.mp4.\n",
-      "Moviepy - Writing video /home/adrian/Projekty/PPO/videos/Acrobot-v1/rl-video-episode-27.mp4\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "t:   0%|          | 0/302 [00:00<?, ?it/s, now=None]\u001B[A\n",
-      "t:  24%|██▍       | 72/302 [00:00<00:00, 714.39it/s, now=None]\u001B[A\n",
-      "t:  53%|█████▎    | 159/302 [00:00<00:00, 800.71it/s, now=None]\u001B[A\n",
-      "t:  80%|████████  | 243/302 [00:00<00:00, 815.91it/s, now=None]\u001B[A\n",
-      "                                                               \u001B[A"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Moviepy - Done !\n",
-      "Moviepy - video ready /home/adrian/Projekty/PPO/videos/Acrobot-v1/rl-video-episode-27.mp4\n",
-      "Moviepy - Building video /home/adrian/Projekty/PPO/videos/Acrobot-v1/rl-video-episode-64.mp4.\n",
-      "Moviepy - Writing video /home/adrian/Projekty/PPO/videos/Acrobot-v1/rl-video-episode-64.mp4\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "t:   0%|          | 0/123 [00:00<?, ?it/s, now=None]\u001B[A\n",
-      "t:  63%|██████▎   | 77/123 [00:00<00:00, 761.76it/s, now=None]\u001B[A\n",
-      "                                                              \u001B[A"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Moviepy - Done !\n",
-      "Moviepy - video ready /home/adrian/Projekty/PPO/videos/Acrobot-v1/rl-video-episode-64.mp4\n",
-      "Moviepy - Building video /home/adrian/Projekty/PPO/videos/Acrobot-v1/rl-video-episode-125.mp4.\n",
-      "Moviepy - Writing video /home/adrian/Projekty/PPO/videos/Acrobot-v1/rl-video-episode-125.mp4\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "t:   0%|          | 0/115 [00:00<?, ?it/s, now=None]\u001B[A\n",
-      "t:  63%|██████▎   | 73/115 [00:00<00:00, 723.59it/s, now=None]\u001B[A\n",
-      "                                                              \u001B[A"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Moviepy - Done !\n",
-      "Moviepy - video ready /home/adrian/Projekty/PPO/videos/Acrobot-v1/rl-video-episode-125.mp4\n",
-      "Moviepy - Building video /home/adrian/Projekty/PPO/videos/Acrobot-v1/rl-video-episode-216.mp4.\n",
-      "Moviepy - Writing video /home/adrian/Projekty/PPO/videos/Acrobot-v1/rl-video-episode-216.mp4\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "t:   0%|          | 0/101 [00:00<?, ?it/s, now=None]\u001B[A\n",
-      "t:  69%|██████▉   | 70/101 [00:00<00:00, 692.86it/s, now=None]\u001B[A\n",
-      "                                                              \u001B[A"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Moviepy - Done !\n",
-      "Moviepy - video ready /home/adrian/Projekty/PPO/videos/Acrobot-v1/rl-video-episode-216.mp4\n",
-      "Moviepy - Building video /home/adrian/Projekty/PPO/videos/Acrobot-v1/rl-video-episode-343.mp4.\n",
-      "Moviepy - Writing video /home/adrian/Projekty/PPO/videos/Acrobot-v1/rl-video-episode-343.mp4\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "t:   0%|          | 0/85 [00:00<?, ?it/s, now=None]\u001B[A\n",
-      "t:  85%|████████▍ | 72/85 [00:00<00:00, 719.41it/s, now=None]\u001B[A\n",
-      "                                                             \u001B[A"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Moviepy - Done !\n",
-      "Moviepy - video ready /home/adrian/Projekty/PPO/videos/Acrobot-v1/rl-video-episode-343.mp4\n",
-      "Moviepy - Building video /home/adrian/Projekty/PPO/videos/Acrobot-v1/rl-video-episode-512.mp4.\n",
-      "Moviepy - Writing video /home/adrian/Projekty/PPO/videos/Acrobot-v1/rl-video-episode-512.mp4\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "t:   0%|          | 0/100 [00:00<?, ?it/s, now=None]\u001B[A\n",
-      "t:  70%|███████   | 70/100 [00:00<00:00, 698.50it/s, now=None]\u001B[A\n",
-      "                                                              \u001B[A"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Moviepy - Done !\n",
-      "Moviepy - video ready /home/adrian/Projekty/PPO/videos/Acrobot-v1/rl-video-episode-512.mp4\n",
-      "Moviepy - Building video /home/adrian/Projekty/PPO/videos/Acrobot-v1/rl-video-episode-729.mp4.\n",
-      "Moviepy - Writing video /home/adrian/Projekty/PPO/videos/Acrobot-v1/rl-video-episode-729.mp4\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "t:   0%|          | 0/74 [00:00<?, ?it/s, now=None]\u001B[A\n",
-      "                                                   \u001B[A"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Moviepy - Done !\n",
-      "Moviepy - video ready /home/adrian/Projekty/PPO/videos/Acrobot-v1/rl-video-episode-729.mp4\n",
-      "Moviepy - Building video /home/adrian/Projekty/PPO/videos/Acrobot-v1/rl-video-episode-1000.mp4.\n",
-      "Moviepy - Writing video /home/adrian/Projekty/PPO/videos/Acrobot-v1/rl-video-episode-1000.mp4\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "t:   0%|          | 0/100 [00:00<?, ?it/s, now=None]\u001B[A\n",
-      "t:  76%|███████▌  | 76/100 [00:00<00:00, 752.41it/s, now=None]\u001B[A\n",
-      "                                                              \u001B[A"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Moviepy - Done !\n",
-      "Moviepy - video ready /home/adrian/Projekty/PPO/videos/Acrobot-v1/rl-video-episode-1000.mp4\n",
-      "\u001B[32mTraining complete!\u001B[0m\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "Waiting for W&B process to finish... <strong style=\"color:green\">(success).</strong>"
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "<style>\n    table.wandb td:nth-child(1) { padding: 0 10px; text-align: left ; width: auto;} td:nth-child(2) {text-align: left ; width: 100%}\n    .wandb-row { display: flex; flex-direction: row; flex-wrap: wrap; justify-content: flex-start; width: 100% }\n    .wandb-col { display: flex; flex-direction: column; flex-basis: 100%; flex: 1; padding: 10px; }\n    </style>\n<div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>charts/SPS</td><td>▁▅▆▇▇▇▇▇▇▇██████████████████████████████</td></tr><tr><td>charts/episodic_length</td><td>█▅▂▂▂▂▂▂▁▁▂▁▁▂▂▂▁▁▂▁▁▁▂▁▃▂▁▁▁▁▁▂▁▁▂▁▁▁▁▂</td></tr><tr><td>charts/episodic_return</td><td>▁▄▇▇▇▇▇▇██▇██▇▇▇██▇███▇█▆▇█████▇██▇████▇</td></tr><tr><td>charts/learning_rate</td><td>███▇▇▇▇▇▇▆▆▆▆▆▆▅▅▅▅▅▄▄▄▄▄▄▃▃▃▃▃▂▂▂▂▂▂▁▁▁</td></tr><tr><td>global_step</td><td>▁▁▂▂▂▂▃▃▃▃▃▃▄▄▄▄▄▄▅▅▅▅▅▅▆▆▆▆▆▆▇▇▇▇▇▇████</td></tr><tr><td>losses/approx_kl</td><td>▅▂▂▁▁▃▄▃▂█▅▂▃▂▆▁▂▃█▄▂▁▃▂▅▁▂▁▂▃▁▁▁▁▂▁▁▁▁▁</td></tr><tr><td>losses/entropy</td><td>████▇▇▇▆▅▄▃▂▂▂▂▂▂▁▂▂▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁</td></tr><tr><td>losses/explained_variance</td><td>▁▂▄▃▄▄▆▇▇█▇▇███▇▇████▇▇██▇███████████▇██</td></tr><tr><td>losses/policy_loss</td><td>▅▄▇▅▅▃▂▄▄█▄▅▆▄▂▅▄▄▃▅▅▅▃▅▃▅▆▅▅▁▄▅▅▅▄▅▅▅▅▅</td></tr><tr><td>losses/value_loss</td><td>█▇▆▆▅▄▄▃▃▂▂▃▁▁▂▂▃▁▁▁▁▃▂▁▂▂▁▁▁▁▁▁▁▁▁▁▂▂▁▁</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>charts/SPS</td><td>475.0</td></tr><tr><td>charts/episodic_length</td><td>91.0</td></tr><tr><td>charts/episodic_return</td><td>-90.0</td></tr><tr><td>charts/learning_rate</td><td>0.0</td></tr><tr><td>global_step</td><td>499712</td></tr><tr><td>losses/approx_kl</td><td>0.0</td></tr><tr><td>losses/entropy</td><td>0.11634</td></tr><tr><td>losses/explained_variance</td><td>0.94983</td></tr><tr><td>losses/policy_loss</td><td>-1e-05</td></tr><tr><td>losses/value_loss</td><td>5.72794</td></tr></table><br/></div></div>"
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": " View run <strong style=\"color:#cdcd00\">PPO_1_Sun_Apr_9_19:41:59_2023</strong> at: <a href='https://wandb.ai/ajaskowiec/Acrobot-v1/runs/ho89znfd' target=\"_blank\">https://wandb.ai/ajaskowiec/Acrobot-v1/runs/ho89znfd</a><br/>Synced 5 W&B file(s), 11 media file(s), 2 artifact file(s) and 2 other file(s)"
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "Find logs at: <code>./wandb/run-20230409_194200-ho89znfd/logs</code>"
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "import time\n",
     "import wandb\n",
@@ -1083,7 +725,10 @@
     "    wandb.finish()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true
+    }
    }
   },
   {
