--- a/PPO_continuous_action.ipynb
+++ b/PPO_continuous_action.ipynb
@@ -652,122 +652,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001B[34m\u001B[1mwandb\u001B[0m: Currently logged in as: \u001B[33majaskowiec\u001B[0m. Use \u001B[1m`wandb login --relogin`\u001B[0m to force relogin\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "wandb version 0.14.2 is available!  To upgrade, please run:\n $ pip install wandb --upgrade"
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "Tracking run with wandb version 0.14.1"
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "Run data is saved locally in <code>/home/adrian/Projekty/PPO/wandb/run-20230409_113026-mhuvy625</code>"
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "Syncing run <strong><a href='https://wandb.ai/ajaskowiec/Pusher-v4/runs/mhuvy625' target=\"_blank\">PPO_1_Sun_Apr_9_11:30:25_2023</a></strong> to <a href='https://wandb.ai/ajaskowiec/Pusher-v4' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": " View project at <a href='https://wandb.ai/ajaskowiec/Pusher-v4' target=\"_blank\">https://wandb.ai/ajaskowiec/Pusher-v4</a>"
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": " View run at <a href='https://wandb.ai/ajaskowiec/Pusher-v4/runs/mhuvy625' target=\"_blank\">https://wandb.ai/ajaskowiec/Pusher-v4/runs/mhuvy625</a>"
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "  0%|          | 0/3906 [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "792ce0bb702545c68e4b67aade1bd551"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-04-09 11:30:27.922944: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001B[31mTraining interrupted!\u001B[0m\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "Waiting for W&B process to finish... <strong style=\"color:green\">(success).</strong>"
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "<style>\n    table.wandb td:nth-child(1) { padding: 0 10px; text-align: left ; width: auto;} td:nth-child(2) {text-align: left ; width: 100%}\n    .wandb-row { display: flex; flex-direction: row; flex-wrap: wrap; justify-content: flex-start; width: 100% }\n    .wandb-col { display: flex; flex-direction: column; flex-basis: 100%; flex: 1; padding: 10px; }\n    </style>\n<div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>charts/SPS</td><td>▁▆▇▇████████████████████████████████████</td></tr><tr><td>charts/episodic_length</td><td>▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁</td></tr><tr><td>charts/episodic_return</td><td>▁▄▅▄▆▅▅▆▇▇▆▇▇▇▇▆█▇▇▇███████▇███████▇████</td></tr><tr><td>charts/learning_rate</td><td>███▇▇▇▇▇▇▆▆▆▆▆▆▅▅▅▅▅▄▄▄▄▄▄▃▃▃▃▃▂▂▂▂▂▂▁▁▁</td></tr><tr><td>global_step</td><td>▁▁▁▂▂▂▂▂▂▃▃▃▃▃▃▄▄▄▄▄▅▅▅▅▅▅▆▆▆▆▆▆▇▇▇▇▇███</td></tr><tr><td>losses/approx_kl</td><td>▁▂▂▂▂▃▃▃▂▃▃▃▂▄▄▄▄▃▅▇▄▆▅▅▅▄▄▆▄▅█▇▆▆▇▄▄▃▄▅</td></tr><tr><td>losses/entropy</td><td>█▇▆▆▅▅▄▄▄▄▃▃▃▃▃▂▂▂▂▂▂▂▂▂▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁</td></tr><tr><td>losses/explained_variance</td><td>▁▁▅▄▆▅▄▅▅▅▇▇▆▇▇▇▇▇██▇██▇▆▇▇▇▇▇▇█▇█▇▇▇█▇▇</td></tr><tr><td>losses/policy_loss</td><td>▂▃▅▂▄▄▄▄▂▃▅▇▃▃▂▂▄▄▃▁▃▂▃▃▃▃▄▃▃▃▁▃▂▅▄▄▃▄█▅</td></tr><tr><td>losses/value_loss</td><td>█▇▄▄▄▃▃▂▁▂▂▁▁▁▁▁▂▂▁▁▂▂▁▁▁▁▁▁▁▁▂▂▂▁▂▁▁▂▂▁</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>charts/SPS</td><td>166.0</td></tr><tr><td>charts/episodic_length</td><td>100.0</td></tr><tr><td>charts/episodic_return</td><td>-33.48601</td></tr><tr><td>charts/learning_rate</td><td>0.00017</td></tr><tr><td>global_step</td><td>3467800</td></tr><tr><td>losses/approx_kl</td><td>0.04496</td></tr><tr><td>losses/entropy</td><td>-8.01006</td></tr><tr><td>losses/explained_variance</td><td>0.94062</td></tr><tr><td>losses/policy_loss</td><td>-0.05509</td></tr><tr><td>losses/value_loss</td><td>0.00393</td></tr></table><br/></div></div>"
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": " View run <strong style=\"color:#cdcd00\">PPO_1_Sun_Apr_9_11:30:25_2023</strong> at: <a href='https://wandb.ai/ajaskowiec/Pusher-v4/runs/mhuvy625' target=\"_blank\">https://wandb.ai/ajaskowiec/Pusher-v4/runs/mhuvy625</a><br/>Synced 5 W&B file(s), 0 media file(s), 2 artifact file(s) and 2 other file(s)"
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "Find logs at: <code>./wandb/run-20230409_113026-mhuvy625/logs</code>"
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "import time\n",
     "import wandb\n",
@@ -843,7 +729,10 @@
     "    wandb.finish()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true
+    }
    }
   },
   {
@@ -902,16 +791,20 @@
    "execution_count": 41,
    "outputs": [],
    "source": [
-    "for i in range(10):\n",
-    "    observation, _ = test_env.reset()\n",
-    "    while True:\n",
-    "        observation = observation.reshape((1, -1))\n",
-    "        action, action_key = get_action(agent_state, observation, action_key)\n",
-    "        action = action.reshape((-1))\n",
-    "        observation, reward, terminated, truncated, info = test_env.step(action)\n",
-    "        if terminated or truncated:\n",
-    "            break\n",
-    "test_env.close()"
+    "try:\n",
+    "    for i in range(10):\n",
+    "        observation, _ = test_env.reset()\n",
+    "        while True:\n",
+    "            observation = observation.reshape((1, -1))\n",
+    "            action, action_key = get_action(agent_state, observation, action_key)\n",
+    "            action = action.reshape((-1))\n",
+    "            observation, reward, terminated, truncated, info = test_env.step(action)\n",
+    "            if terminated or truncated:\n",
+    "                break\n",
+    "except KeyboardInterrupt:\n",
+    "    print(colored('Validation stopped!', 'red'))\n",
+    "finally:\n",
+    "    test_env.close()"
    ],
    "metadata": {
     "collapsed": false
@@ -928,29 +821,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "'my_checkpoints/pusher_ppo1693'"
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "from flax.training import checkpoints\n",
     "\n",
     "checkpoints.save_checkpoint(ckpt_dir='checkpoints/',  # Folder to save checkpoint in\n",
     "                            target=agent_state,  # What to save. To only save parameters, use model_state.params\n",
     "                            step=1693,  # Training step or other metric to save best model on\n",
-    "                            prefix='pusher_ppo',  # Checkpoint file name prefix\n",
+    "                            prefix=f'{env_id}-',  # Checkpoint file name prefix\n",
     "                            overwrite=True   # Overwrite existing checkpoint files\n",
     "                            )"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true
+    }
    }
   }
  ],
